authorize button show and worked on swagger ui success
