# storage/api-docs/api-docs.json
@@ -2,20 +2,13 @@
     "openapi": "3.0.0",
     "info": {
         "title": "E-Commerce API",
-        "description": "API documentation for the E-Commerce project",
-        "contact": {
-            "email": "support@example.com"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
+        "description": "API documentation for the eCommerce platform",
         "version": "1.0.0"
     },
     "servers": [
         {
             "url": "http://127.0.0.1:8000/",
-            "description": ""
+            "description": "Local development server"
         }
     ],
     "paths": {
@@ -117,25 +110,46 @@
         },
         "/api/logout": {
             "post": {
+                "tags": [
+                    "Authentication"
+                ],
                 "summary": "Logout a user",
                 "operationId": "fe8f3429cd6979b3b4517e186505f9f9",
                 "responses": {
                     "200": {
-                        "description": "User  logged out successfully"
+                        "description": "User logged out successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Successfully logged out"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     },
                     "401": {
                         "description": "Unauthorized"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ]
             }
         },
         "/api/me": {
-            "get": {
+            "post": {
                 "tags": [
                     "Authentication"
                 ],
                 "summary": "Get authenticated user details",
-                "operationId": "9d9bc556f927575aa492a88c28fe5908",
+                "operationId": "3fc3f2f762fb3c5ecf211fcb0d4f81ff",
                 "responses": {
                     "200": {
                         "description": "User details",
@@ -167,7 +181,7 @@
                 },
                 "security": [
                     {
-                        "apiAuth": []
+                        "BearerAuth": []
                     }
                 ]
             }
@@ -210,7 +224,7 @@
                 },
                 "security": [
                     {
-                        "apiAuth": []
+                        "BearerAuth": []
                     }
                 ]
             }
@@ -224,12 +238,28 @@
                 "operationId": "1bfaa78d1c2c3848ab8165c5dadcad3e",
                 "responses": {
                     "200": {
-                        "description": "A list of products"
+                        "description": "A list of products",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/Product"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
                     }
                 },
                 "security": [
                     {
-                        "apiAuth": []
+                        "BearerAuth": []
                     }
                 ]
             },
@@ -259,7 +289,7 @@
                 },
                 "security": [
                     {
-                        "apiAuth": []
+                        "BearerAuth": []
                     }
                 ]
             }
@@ -299,7 +329,7 @@
                 },
                 "security": [
                     {
-                        "apiAuth": []
+                        "BearerAuth": []
                     }
                 ]
             },
@@ -347,7 +377,7 @@
                 },
                 "security": [
                     {
-                        "apiAuth": []
+                        "BearerAuth": []
                     }
                 ]
             },
@@ -378,7 +408,7 @@
                 },
                 "security": [
                     {
-                        "apiAuth": []
+                        "BearerAuth": []
                     }
                 ]
             }
@@ -442,15 +472,12 @@
             },
             "User": {
                 "required": [
-                    "id",
                     "name",
-                    "email"
+                    "email",
+                    "password",
+                    "password_confirmation"
                 ],
                 "properties": {
-                    "id": {
-                        "type": "integer",
-                        "example": 1
-                    },
                     "name": {
                         "type": "string",
                         "example": "John Doe"
@@ -460,26 +487,30 @@
                         "format": "email",
                         "example": "john@example.com"
                     },
-                    "created_at": {
+                    "password": {
                         "type": "string",
-                        "format": "date-time",
-                        "example": "2025-03-22T12:34:56Z"
+                        "format": "password",
+                        "example": "secret123"
                     },
-                    "updated_at": {
+                    "password_confirmation": {
                         "type": "string",
-                        "format": "date-time",
-                        "example": "2025-03-22T12:34:56Z"
+                        "format": "password",
+                        "example": "secret123"
                     }
                 },
                 "type": "object"
             }
+        },
+        "securitySchemes": {
+            "BearerAuth": {
+                "type": "http",
+                "description": "Enter token in format 'Bearer {token}'",
+                "bearerFormat": "JWT",
+                "scheme": "bearer"
+            }
         }
     },
     "tags": [
-        {
-            "name": "Products",
-            "description": "Product management"
-        },
         {
             "name": "Auth",
             "description": "Auth"
@@ -487,6 +518,10 @@
         {
             "name": "Authentication",
             "description": "Authentication"
+        },
+        {
+            "name": "Products",
+            "description": "Products"
         }
     ]
 }
